Rodada 4 Iury -Leo

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         for (var i = 0; i < 7; i++) {
             var RodadaCavalo1 = (7 + Math.random() * (9 -2))
             var RodadaCavalo2 = (7 + Math.random() * (9 -2))
-            var RodadaCavalo3 = (7 + Math.random() * (9 -2))
+            var RodadaCavalo3 = (7 + Math.random() * (9 -2));
             
             console.log(RodadaCavalo1);
             console.log(RodadaCavalo2);
