--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 </head>
 
 <body>
-    <h2></h2>
+    <h2>Insira o nome do cavalo 1</h2>
+    <input type="text" id="in_nome">
+    <h2>Insira o nome do cavalo 1</h2>
+    <input type="text" id="in_nome2">
+
+    <h2>Insira o nome do cavalo 1</h2>
+    <input type="text" id="in_nome3">
     <button onclick="turfe()">Largada</button>
     <div id="div_resultado"></div>
 </body>
@@ -18,21 +24,23 @@
 <script>
     var cavalos = [
         {
-
+            nome:'',
             voltaAtual: 0,
             voltaSomada: 0
         },
         {
+            nome:'',
             voltaAtual: 0,
             voltaSomada: 0
         },
-        {
+        {   
+            nome:'',
             voltaAtual: 0,
             voltaSomada: 0
         },
     ]
     function turfe() {
-div_resultado=""
+    div_resultado.innerHTML=""
         for (var i = 0; i < 7; i++) {
             var RodadaCavalo1 = (7 + Math.random() * 2)
             var RodadaCavalo2 = (7 + Math.random() * 2)
