--- a/index.html
+++ b/index.html
@@ -101,35 +101,44 @@
         var cavalo2 = cavalos[1].voltaSomada;
         var cavalo3 = cavalos[2].voltaSomada;
 
-        var lugar1;
-        var lugar2;
-        var lugar3;
+        var lugar1 = '';
+        var lugar2 = '';
+        var lugar3 = '';
 
         if (cavalo1 < cavalo2 && cavalo1 < cavalo3) {
             lugar1 = cavalos[0].nome;
             if (cavalo2 < cavalo3) {
                 lugar2 = cavalos[1].nome;
-            } else {
                 lugar3 = cavalos[2].nome;
+            }
+            if (cavalo3 < cavalo2) {
+                lugar2 = cavalos[2].nome;
+                lugar3 = cavalos[1].nome;
             }
         } else if (cavalo2 < cavalo1 && cavalo2 < cavalo3) {
             lugar1 = cavalos[1].nome;
             if (cavalo1 < cavalo3) {
                 lugar2 = cavalos[0].nome;
-            } else {
                 lugar3 = cavalos[2].nome;
+            }
+            if (cavalo3 < cavalo1) {
+                lugar2 = cavalos[2].nome;
+                lugar3 = cavalos[0].nome;
+
             }
         } else if (cavalo3 < cavalo1 && cavalo3 < cavalo2) {
             lugar1 = cavalos[2].nome;
-            if (cavalo1 < cavalo3) {
+            if (cavalo1 < cavalo2) {
                 lugar2 = cavalos[0].nome;
-            } else {
-                lugar3 = cavalos[1].nome;
+                lugar3 = cavalos[2].nome;
+            } if (cavalo2 < cavalo1) {
+                lugar2 = cavalos[2].nome;
+                lugar3 = cavalos[0].nome;
             }
         }
-        
-        div_resultado.innerHTML +=  
-                `
+
+        div_resultado.innerHTML +=
+            `
              
             Em 1° lugar ${lugar1}<br>
             Em 2° lugar ${lugar2}<br>
